--- a/emailops-build/roles/build-zimbra/templates/nginx.conf.web.https.j2
+++ b/emailops-build/roles/build-zimbra/templates/nginx.conf.web.https.j2
@@ -3,22 +3,34 @@
 # 
 server
 {
-    server_name             ${vhn}; 
-    ${core.ipboth.enabled}listen                  ${vip}:${web.https.port};
-    ${core.ipv4only.enabled}listen                  ${vip}:${web.https.port};
-    ${core.ipv6only.enabled}listen                  ${vip}:${web.https.port} ipv6only=on;
-    client_max_body_size        0;
-    ssl                         on;
-    ssl_prefer_server_ciphers   ${web.ssl.preferserverciphers};
-    ssl_certificate             ${ssl.crt};
-    ssl_certificate_key         ${ssl.key};
-    ssl_dhparam                 {{ zimbra_dhparam_output }};
-    ssl_ciphers                 "{{ include_ciphers }}";
+    server_name                         ${vhn}; 
+    ${core.ipboth.enabled}listen        ${vip}:${web.https.port};
+    ${core.ipv4only.enabled}listen      ${vip}:${web.https.port};
+    ${core.ipv6only.enabled}listen      ${vip}:${web.https.port} ipv6only=on;
+    client_max_body_size                0;
+    ssl                                 on;
+    ssl_prefer_server_ciphers           ${web.ssl.preferserverciphers};
+    ssl_certificate                     ${ssl.crt};
+    ssl_certificate_key                 ${ssl.key};
+    ssl_dhparam                         {{ zimbra_dhparam_output }};
+    ssl_ciphers                         "{{ include_ciphers }}";
 
 
     location /
     {
         include             ${core.includes}/${core.cprefix}.web.https.mode-${web.mailmode};
+
+        ## add custom error page documents
+        error_page 400 401 403 404 /40x.html
+        location = /40x.html {
+            root    html;
+            allow   all;
+        }
+
+        error_page 500 501 502 503 504 /50x.html
+        location = /50x.html {
+            root html;
+        }
 
         # Begin stray redirect hack
         # 
