--- a/build-dns/roles/build_master/templates/ssh/config.j2
+++ b/build-dns/roles/build_master/templates/ssh/config.j2
@@ -12,7 +12,7 @@ Host github.com
 
 <% for host in hostlist %>
 Host {{ host }} {{ host}}.synacor.com
-    HostName                    = {{ host }}.synacor.com
+    HostName                    = {{ host }}
 
 <% endfor %>
 
